separate project for JNI reproducer